# parallel-nbody-simulation-mpi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/: initialized_4096  initialized_65536
src/: body.c  body.h  file_io.c  file_io.h  main.c  timer.c  timer.h
